--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             
             <div class="menu-icon-container menu-itens">
-                    <a href="">
+                    <a href="cadastro-receitas.php">
                         <img src="img/icons/contract.svg" class="menu-icon">
                     </a>
                     <span onclick="openNav()" style="margin-left: 150px; margin-right: 5px; cursor: pointer;">
